# stock_agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  에이전트. 통합 매매 전략 (1~8장).md
src/stock_agent/: __init__.py  config.py  journal.py  journal_import.py  mcp_server.py  models.py  report.py
src/stock_agent/data/: __init__.py  provider.py
src/stock_agent/engine/: __init__.py  decide.py  sell_rules.py  stage3_position.py  stage4_signal.py  supply_demand.py
src/stock_agent/fundamentals/: __init__.py  brief.py  store.py
src/stock_agent/indicators/: __init__.py  candles.py  rsi.py  trend.py  volume.py
tests/: conftest.py  test_engine.py  test_indicators.py
