[project]
name = "stock-agent"
version = "0.1.0"
description = "박두환 통합 매매 전략 의사결정 엔진 — 종목 분석 보조 에이전트 (계산·판정은 코드, 시나리오 판단은 사람)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# 실시간 시장 데이터(OHLCV·수급). pykrx=한국(KRX 공개 데이터), yfinance=미국 등 해외 OHLCV.
data = [
    "pykrx>=1.0.45",
    "yfinance>=0.2",
]
# 종목코드 -> OHLCV/수급 MCP 서버
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
